syntax = "proto3";
option csharp_namespace = "ReaderDigest.LocationService";
// Generated according to https://cloud.google.com/apis/design/standard_methods
package distance;
service DistanceInfo {
   rpc GetDistance (Cities) returns (DistanceData);
}

message Cities {
    string originCity = 1;
    string destinationCity = 2;
}

message DistanceData {
    string miles = 1;
}
